// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI --hot webpack 4 1`] = `
"<i> [webpack-dev-server] Project is running at http://localhost:8080/
<i> [webpack-dev-server] Content not from webpack x.x.x served from 'Xdir/static' directory
<i> [webpack-dev-middleware] Hash: X
<i> Version: webpack x.x.x Time: Xms
<i> Built at: Thu Jan 01 1970 <CLR=BOLD>00:00:00</CLR> GMT
<i>   Asset     Size  Chunks             Chunk Names
<i> main.js  X KiB    main  [emitted]  main
<i> Entrypoint main = main.js
<i> [0] multi Xdir/client/default?http://0.0.0.0 (webpack)/hot/dev-server.js ./foo.js X bytes {main} [built]
<i> [../../../client/default/index.js?http://0.0.0.0] Xdir/client/default?http://0.0.0.0 X KiB {main} [built]
<i> [../../../client/default/overlay.js] Xdir/client/default/overlay.js X KiB {main} [built]
<i> [../../../client/default/socket.js] Xdir/client/default/socket.js X KiB {main} [built]
<i> [../../../client/default/utils/createSocketUrl.js] Xdir/client/default/utils/createSocketUrl.js X KiB {main} [built]
<i> [../../../client/default/utils/log.js] Xdir/client/default/utils/log.js X bytes {main} [built]
<i> [../../../client/default/utils/reloadApp.js] Xdir/client/default/utils/reloadApp.js X KiB {main} [built]
<i> [../../../client/default/utils/sendMessage.js] Xdir/client/default/utils/sendMessage.js X bytes {main} [built]
<i> [../../../client/transpiled-modules/strip-ansi.js] Xdir/client/transpiled-modules/strip-ansi.js X bytes {main} [built]
<i> [../../../node_modules/webpack/hot sync ^\\\\.\\\\/log$] (webpack)/hot sync nonrecursive ^\\\\.\\\\/log$ X bytes {main} [built]
<i> [../../../node_modules/webpack/hot/dev-server.js] (webpack)/hot/dev-server.js X KiB {main} [built]
<i> [../../../node_modules/webpack/hot/emitter.js] (webpack)/hot/emitter.js X bytes {main} [built]
<i> [../../../node_modules/webpack/hot/log-apply-result.js] (webpack)/hot/log-apply-result.js X KiB {main} [built]
<i> [../../../node_modules/webpack/hot/log.js] (webpack)/hot/log.js X KiB {main} [built]
<i> [./foo.js] X bytes {main} [built]
<i>     + 19 hidden modules
<i> [webpack-dev-middleware] Compiled successfully."
`;

exports[`CLI --hot webpack 5 1`] = `
"<i> [webpack-dev-server] Project is running at http://localhost:8080/
<i> [webpack-dev-server] Content not from webpack x.x.x served from 'Xdir/static' directory
<i> [webpack-dev-middleware] asset main.js X KiB [emitted] (name: main)
<i> runtime modules X KiB 10 modules
<i> cacheable modules X KiB
<i>   modules by path ../../../node_modules/ X KiB 16 modules
<i>   modules by path ../../../client/ X KiB
<i>     modules by path ../../../client/default/ X KiB 8 modules
<i>     modules by path ../../../client/transpiled-modules/*.js X KiB 2 modules
<i>     modules by path ../../../client/clients/*.js X KiB
<i>       ../../../client/clients/WebsocketClient.js X KiB [built] [code generated]
<i>       ../../../client/clients/BaseClient.js X KiB [built] [code generated]
<i>   ./foo.js X bytes [built] [code generated]
<i> ../../../node_modules/webpack/hot/ sync nonrecursive ^\\\\.\\\\/log$ X bytes [built] [code generated]
<i> webpack x.x.x compiled successfully in X ms
<i> [webpack-dev-middleware] Compiled successfully."
`;

exports[`CLI --no-hot webpack 4 1`] = `
"<i> [webpack-dev-server] Project is running at http://localhost:8080/
<i> [webpack-dev-server] Content not from webpack x.x.x served from 'Xdir/static' directory
<i> [webpack-dev-middleware] Hash: X
<i> Version: webpack x.x.x Time: Xms
<i> Built at: Thu Jan 01 1970 <CLR=BOLD>00:00:00</CLR> GMT
<i>   Asset     Size  Chunks             Chunk Names
<i> main.js  X KiB    main  [emitted]  main
<i> Entrypoint main = main.js
<i> [0] multi Xdir/client/default?http://0.0.0.0 ./foo.js X bytes {main} [built]
<i> [../../../client/clients/WebsocketClient.js] Xdir/client/clients/WebsocketClient.js X KiB {main} [built]
<i> [../../../client/default/index.js?http://0.0.0.0] Xdir/client/default?http://0.0.0.0 X KiB {main} [built]
<i> [../../../client/default/overlay.js] Xdir/client/default/overlay.js X KiB {main} [built]
<i> [../../../client/default/socket.js] Xdir/client/default/socket.js X KiB {main} [built]
<i> [../../../client/default/utils/createSocketUrl.js] Xdir/client/default/utils/createSocketUrl.js X KiB {main} [built]
<i> [../../../client/default/utils/getCurrentScriptSource.js] Xdir/client/default/utils/getCurrentScriptSource.js X bytes {main} [built]
<i> [../../../client/default/utils/log.js] Xdir/client/default/utils/log.js X bytes {main} [built]
<i> [../../../client/default/utils/reloadApp.js] Xdir/client/default/utils/reloadApp.js X KiB {main} [built]
<i> [../../../client/default/utils/sendMessage.js] Xdir/client/default/utils/sendMessage.js X bytes {main} [built]
<i> [../../../client/transpiled-modules/log.js] Xdir/client/transpiled-modules/log.js X KiB {main} [built]
<i> [../../../client/transpiled-modules/strip-ansi.js] Xdir/client/transpiled-modules/strip-ansi.js X bytes {main} [built]
<i> [../../../node_modules/ansi-html/index.js] Xdir/node_modules/ansi-html/index.js X KiB {main} [built]
<i> [../../../node_modules/webpack/hot sync ^\\\\.\\\\/log$] (webpack)/hot sync nonrecursive ^\\\\.\\\\/log$ X bytes {main} [built]
<i> [./foo.js] X bytes {main} [built]
<i>     + 17 hidden modules
<i> [webpack-dev-middleware] Compiled successfully."
`;

exports[`CLI --no-hot webpack 5 1`] = `
"<i> [webpack-dev-server] Project is running at http://localhost:8080/
<i> [webpack-dev-server] Content not from webpack x.x.x served from 'Xdir/static' directory
<i> [webpack-dev-middleware] asset main.js X KiB [emitted] (name: main)
<i> runtime modules X bytes 3 modules
<i> cacheable modules X KiB
<i>   modules by path ../../../node_modules/ X KiB 14 modules
<i>   modules by path ../../../client/ X KiB
<i>     modules by path ../../../client/default/ X KiB 8 modules
<i>     modules by path ../../../client/transpiled-modules/*.js X KiB 2 modules
<i>     modules by path ../../../client/clients/*.js X KiB
<i>       ../../../client/clients/WebsocketClient.js X KiB [built] [code generated]
<i>       ../../../client/clients/BaseClient.js X KiB [built] [code generated]
<i>   ./foo.js X bytes [built] [code generated]
<i> ../../../node_modules/webpack/hot/ sync nonrecursive ^\\\\.\\\\/log$ X bytes [built] [code generated]
<i> webpack x.x.x compiled successfully in X ms
<i> [webpack-dev-middleware] Compiled successfully."
`;
